<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
                             https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.github.gbenroscience</groupId>
        <artifactId>parser-ng-parent</artifactId>
        <version>3.0.1</version>
        <relativePath>../pom.xml</relativePath>
    </parent>
    <groupId>com.github.gbenroscience</groupId>
    <artifactId>parser-ng-gpu-simd</artifactId>
    <version>3.0.1</version>
    <packaging>jar</packaging>
    <name>parser-ng-gpu-simd</name>
    <description>
        Hardware-accelerated, scalable(scalability of SIMD tested on Linux-(Centos tested)) SIMD vector and GPU calculation pipelines for ParserNG.
        Fastest Java math evaluator in the world period
        Rich and Performant, Cross Platform Java Library(100% Java).No native dependencies.(e.g. JNI) 
        Version 3.0.1 features GPU bulk evaluation for OpenCL(tested) and CUDA. It also features the SIMDEnginvEvaluator and SIMDCommandTurboEvaluator, both
        of which benefit from CPU Pinning to minimize cache thrashing and other stories. This leads to highly efficient worker-count to output velocity conversion. 
        For library support, customizations or donations, reach me at gbenroscience@gmail.com|+2348165779034
    </description>
    <url>https://github.com/gbenroscience/parserng-enterprise</url>

    <properties>
        <exec.mainClass>com.github.gbenroscience.simd.turbo.tools.bench.ParserNgBench</exec.mainClass>
        <!-- This module requires Java 22+ because of CPU Pinning tasks and other stories -->
        <maven.compiler.release>22</maven.compiler.release>
        <maven.compiler.source>22</maven.compiler.source>
        <maven.compiler.target>22</maven.compiler.target>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.github.gbenroscience</groupId>
            <artifactId>parser-ng</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.github.gbenroscience</groupId>
            <artifactId>parser-ng-simd</artifactId>
            <version>${project.version}</version>
        </dependency>

        <!-- Test dependencies -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.10.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.codehaus.janino</groupId>
            <artifactId>janino</artifactId>
            <version>3.1.12</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.10.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>5.10.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.openjdk.jmh</groupId>
            <artifactId>jmh-core</artifactId>
            <version>1.37</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.openjdk.jmh</groupId>
            <artifactId>jmh-generator-annprocess</artifactId>
            <version>1.37</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <release>22</release>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.openjdk.jmh</groupId>
                            <artifactId>jmh-generator-annprocess</artifactId>
                            <version>1.37</version>
                        </path>
                    </annotationProcessorPaths>
                    <compilerArgs>
                        <arg>--add-modules</arg>
                        <arg>jdk.incubator.vector</arg>
                    </compilerArgs>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
                <configuration>
                    <argLine>
                        --add-modules jdk.incubator.vector
                        --enable-native-access=ALL-UNNAMED
                    </argLine>
                    <!--                    
                    <skipTests>false</skipTests>-->
                </configuration>
            </plugin>

            <!-- JMH Benchmark shading -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.2</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <finalName>benchmarks</finalName>
                            <includeDependencySources>false</includeDependencySources>
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>com.github.gbenroscience.simd.turbo.tools.bench.ParserNgBench</mainClass>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
